--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 </head>
 <body>
+    <div class="open-close-mobile-navbar">
+        <div class="mobile-navbar-bar1"></div>
+        <div class="mobile-navbar-bar2"></div>
+        <div class="mobile-navbar-bar3"></div>
+    </div>
     <nav class="navbar">
         <div class="navbar-container">
             <img class="navbar-logo-img" src="assets/img/Logo-black.png" alt="Logo empresa GX2">
@@ -191,6 +196,6 @@
         </div>
     </footer>
 
-
+    <script src="assets/js/navbar-mobile.js"></script>
 </body>
 </html>
