--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="requirements-container">
             <img class="requirements-student-img" style="width: 298px; height: 306px;" src="assets/img/estudante.png" alt="Estudante comemorando">
             <div class="requirements-content">
-                <h2 class="requirements-title">Detalhes importantes</h2>
+                <h2 class="requirements-title margin-wrap">Detalhes importantes</h2>
                 <p class="requirements-subtitle">Estamos buscando pessoas que:</p>
                 <ul class="details-ul">
                     <li>• O treinamento é ministrado por um Líder Técnico do time GX2;</li>
